# vcpkg_demo

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
arbiter/: prediction.thrift
executables/: client.cpp  server.cpp
src/: main.cpp  predict_handler.cpp  predict_handler.h  rpc_press.cpp
